# signal_for_android_decryption

./: pyproject.toml  requirements.txt
src/signal-decrypt/: cli.py  decrypt_backup.py
src/signal_decrypt/: Backups_pb2.py  decrypt_backup.py
src/signal_decrypt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/signal_for_android_decryption.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
